--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -10,6 +10,49 @@ header.index {
 	margin: 2rem 0 2rem 0;
 }
 
+header.immersive {
+	background: #323442;
+	color: #FFF;
+	width: 100%;
+	padding-top: 150px;
+
+	nav {
+		a.item {
+			background: rgba(0, 0, 0, 0.45);
+			color: #FFF;
+			display: inline-block;
+			padding: 5px 15px;
+			font-size: 12px;
+
+			&.active {
+				background: #FFF;
+				color: #000;
+			}
+		}
+	}
+}
+
+section.infobar {
+	background: #FFF;
+	color: #000;
+	width: 100%;
+	font-size: 14px;
+	margin-bottom: 25px;
+	padding: 10px 0;
+	border-bottom: 1px #d7d7d7 solid;
+	text-align: center;
+
+	ul {
+		display: table;
+	    width: 100%;
+	    margin: 0;
+
+		li {
+			display: table-cell;
+		}
+	}
+}
+
 main {
 	background: #FFFFFF;
 	border: 1px @container-border solid;
