Minor formatting changes.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -23,6 +23,7 @@ header.immersive {
 			display: inline-block;
 			padding: 5px 15px;
 			font-size: 12px;
+			text-decoration: none;
 
 			&.active {
 				background: #FFF;
