--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,7 +1,5 @@
+@import 'variables.less';
 @import (inline) '../css/kayo-fonts.css';
-
-@background: #fafafa;
-@container-border: #d7d7d7;
 
 body {
 	background: @background;
@@ -10,26 +8,45 @@ body {
 header.index {
 	text-align: center;
 	margin: 2rem 0 2rem 0;
+
+	div.logo {
+		width: @logo-width;
+		height: @logo-height;
+		display: inline-block;
+
+		a {
+			width: 100%;
+			height: 100%;
+			display: block;
+		}
+	}
 }
 
 header.immersive {
-	background: #323442;
+	background: @header-immersive-background;
 	color: #FFF;
 	width: 100%;
 	padding-top: 150px;
 
 	nav {
 		a.item {
-			background: rgba(0, 0, 0, 0.45);
-			color: #FFF;
+			background: @navitem-default-background;
+			color: @navitem-default-color;
 			display: inline-block;
 			padding: 5px 15px;
 			font-size: 12px;
 			text-decoration: none;
 
 			&.active {
-				background: #FFF;
-				color: #000;
+				&, &:hover, &:focus {
+					background: @navitem-active-background;
+					color: @navitem-active-color;
+				}
+			}
+
+			&:hover, &:focus {
+				background: @navitem-hover-background;
+				color: @navitem-hover-color;
 			}
 		}
 	}
@@ -57,8 +74,8 @@ section.infobar {
 }
 
 main {
-	background: #FFFFFF;
-	border: 1px @container-border solid;
+	background: @main-container-background;
+	border: 1px @main-container-border solid;
 	margin-bottom: 15px;
 	padding: 40px 50px;
 }
