--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -1,6 +1,9 @@
 /* global */
 @background: #fafafa;
 
+@regular-font: 'Roboto';
+@light-font: 'Roboto Light';
+
 /* header logo image */
 @logo-width: 172px;
 @logo-height: 25px;
@@ -21,3 +24,8 @@
 
 @navitem-hover-background: rgba(0, 0, 0, 0.65);
 @navitem-hover-color: #fff;
+
+/* release badge colors */
+@release-badge-stable: #5f9d4c;
+@release-badge-experimental: #b93c3c;
+@release-badge-nightly: #833cb9;
