Add link to releases page in infobar.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -77,6 +77,10 @@ section.infobar {
 			padding: 0;
 			text-align: center;
 			white-space: nowrap;
+
+			a, a:hover, a:active {
+				color: #000;
+			}
 		}
 	}
 }
