Make releases page look better on mobile.
* Add some more helper styles.

* Move paragraph line-height from release description to global
  article style. Also make all article images 'responsive'.

Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/globals.less
+++ b/resources/assets/less/globals.less
@@ -12,3 +12,21 @@ a {
 		color: #7b52ca;
 	}
 }
+
+.main-font { font-family: @regular-font; }
+
+h1, .h1 { font-family: @light-font; font-size: 2rem; }
+h2, .h2 { font-family: @light-font; font-size: 1.75rem; }
+h3, .h3 { font-family: @light-font; font-size: 1.5rem; }
+
+/* responsive images by default */
+article {
+	p {
+		line-height: 1.825;
+	}
+
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+}
