--- a/resources/assets/less/releases.less
+++ b/resources/assets/less/releases.less
@@ -1,5 +1,5 @@
 section.release-sidebar {
-	padding-top: 10px;
+	padding: 10px 0;
 
 	span.badge {
 		padding: 7px 12px;
@@ -27,7 +27,6 @@ section.release-header {
 
 section.release-description {
 	margin: 20px 0 25px 0;
-	line-height: 1.825;
 }
 
 section.release-files {
