--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -4,6 +4,13 @@
 @regular-font: 'Roboto';
 @light-font: 'Roboto Light';
 
+/* breakpoints - bootstrap defaults */
+@breakpoint-xs: 0;
+@breakpoint-sm: 576px;
+@breakpoint-md: 768px;
+@breakpoint-lg: 992px;
+@breakpoint-xl: 1200px;
+
 /* header logo image */
 @logo-width: 172px;
 @logo-height: 25px;
