Add basic project Wiki system.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/globals.less
+++ b/resources/assets/less/globals.less
@@ -15,9 +15,9 @@ a {
 
 .main-font { font-family: @regular-font; }
 
-h1, .h1 { font-family: @light-font; font-size: 2rem; }
-h2, .h2 { font-family: @light-font; font-size: 1.75rem; }
-h3, .h3 { font-family: @light-font; font-size: 1.5rem; }
+h1, .h1 { font-size: 2rem; }
+h2, .h2 { font-size: 1.75rem; }
+h3, .h3 { font-size: 1.5rem; }
 
 /* responsive images by default */
 article {
