--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -2,6 +2,10 @@
 
 @import 'variables.less';
 @import 'globals.less';
+
+/* pages */
+@import 'wiki.less';
+@import 'errors.less';
 @import 'releases.less';
 
 header.index {
