Minor article header spacing changes.
* Also made paragraph text a little lighter.

Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/globals.less
+++ b/resources/assets/less/globals.less
@@ -21,7 +21,13 @@ h3, .h3 { font-size: 1.5rem; }
 
 /* responsive images by default */
 article {
+	h1, h2, h3, h4, h5, h6 {
+		padding-top: 0.4rem;
+		margin-bottom: 0.7rem;
+	}
+
 	p {
+		color: @article-paragraph-color;
 		line-height: 1.825;
 	}
 
