--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -15,6 +15,9 @@
 @logo-width: 172px;
 @logo-height: 25px;
 
+/* article content */
+@article-paragraph-color: #3a3a3a;
+
 /* immersive header defaults */
 @header-immersive-background: #323442;
 
