Slightly adjust 'Nightly' release badge color.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -38,4 +38,4 @@
 /* release badge colors */
 @release-badge-stable: #5f9d4c;
 @release-badge-experimental: #b93c3c;
-@release-badge-nightly: #833cb9;
+@release-badge-nightly: #603482;
