--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -31,6 +31,16 @@ header.immersive {
 	color: #FFF;
 	width: 100%;
 
+	div.title {
+		font-size: 24px;
+		font-family: @light-font;
+		margin-bottom: 7px;
+		
+		a {
+			color: #ffffff;
+		}
+	}
+
 	div.overlay {
 		background: rgba(0, 0, 0, .65);
 		padding-top: 150px;
