--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -12,8 +12,10 @@
 @breakpoint-xl: 1200px;
 
 /* header logo image */
-@logo-width: 172px;
-@logo-height: 25px;
+@logo-width: 150px;
+
+/* immersive header logo image */
+@logo-width-immersive: 95px;
 
 /* article content */
 @article-paragraph-color: #3a3a3a;
