Add signatures to release page again.
* Also add spacing between files.

Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/releases.less
+++ b/resources/assets/less/releases.less
@@ -37,6 +37,10 @@ section.release-files {
 		li {
 			font-size: 14px;
 
+			&:not(:last-child) {
+				margin-bottom: 25px;
+			}
+
 			div.release-file-info {
 				padding: 6px 0 0 20px;
 				font-family: monospace;
