Center align project navigation on mobile viewports.
* Logo looks fine on the left.. for now..

* Also break on really long file info lines.

Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/releases.less
+++ b/resources/assets/less/releases.less
@@ -45,6 +45,7 @@ section.release-files {
 				padding: 6px 0 0 20px;
 				font-family: monospace;
 				font-size: 12px;
+				word-wrap: break-word;
 			}
 		}
 	}
