Add left and right chevron icons for pagination.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/css/kayo-fonts.css
+++ b/resources/assets/css/kayo-fonts.css
@@ -68,5 +68,7 @@
 .icon-clock:before { content: '\e807'; }
 .icon-question:before { content: '\e808'; }
 .icon-location:before { content: '\e809'; }
+.icon-chevron-left:before { content: '\e80a'; }
 .icon-link:before { content: '\e80b'; }
 .icon-mail:before { content: '\e80c'; }
+.icon-chevron-right:before { content: '\e80d'; }
