Paginate main project listing index page.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -113,6 +113,22 @@ main {
 	border: 1px @main-container-border solid;
 	margin-bottom: 15px;
 	padding: 40px 50px;
+
+	nav.page-navigation {
+		width: 100%;
+		margin: 0 auto;
+		color: #909090;
+		font-size: 12px;
+		text-align: center;
+
+		span.separator {
+			padding: 0 25px;
+		}
+		
+		a {
+			color: #7b7b7b;
+		}
+	}
 }
 
 footer {
