Add media glyph to kayo font.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/css/kayo-fonts.css
+++ b/resources/assets/css/kayo-fonts.css
@@ -72,3 +72,4 @@
 .icon-link:before { content: '\e80b'; }
 .icon-mail:before { content: '\e80c'; }
 .icon-chevron-right:before { content: '\e80d'; }
+.icon-media:before { content: '\e80e'; }
