Update kayo fonts file.
* Remove question icon since it's no longer used in error pages.

* Add 'fork' icon for later use.

Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/css/kayo-fonts.css
+++ b/resources/assets/css/kayo-fonts.css
@@ -66,10 +66,10 @@
 .icon-book:before { content: '\e805'; }
 .icon-warning:before { content: '\e806'; }
 .icon-clock:before { content: '\e807'; }
-.icon-question:before { content: '\e808'; }
 .icon-location:before { content: '\e809'; }
 .icon-chevron-left:before { content: '\e80a'; }
 .icon-link:before { content: '\e80b'; }
 .icon-mail:before { content: '\e80c'; }
 .icon-chevron-right:before { content: '\e80d'; }
 .icon-media:before { content: '\e80e'; }
+.icon-fork:before { content: '\f126'; }
