Add Git repository link to releases page.
* I have no idea where else to put it.

Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/releases.less
+++ b/resources/assets/less/releases.less
@@ -4,8 +4,9 @@ section.release-sidebar {
 	span.badge {
 		padding: 7px 12px;
 		font-weight: 300;
+		background: #000;
 	}
-	
+
 	span.release-badge-stable { background: @release-badge-stable; }
 	span.release-badge-experimental { background: @release-badge-experimental; }
 	span.release-badge-nightly { background: @release-badge-nightly; }
