--- a/resources/assets/less/errors.less
+++ b/resources/assets/less/errors.less
@@ -5,4 +5,13 @@ section.error-container {
 	span.error-icon {
 		font-size: 80px;
 	}
+
+	h1 {
+		margin-bottom: 1rem;
+	}
+
+	p {
+		width: 50%;
+		margin: 0 auto;
+	}
 }
