Decrease card column count on smaller viewports.
* Makes the index page look A LOT better on mobile.

Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/globals.less
+++ b/resources/assets/less/globals.less
@@ -19,6 +19,12 @@ h1, .h1 { font-size: 2rem; }
 h2, .h2 { font-size: 1.75rem; }
 h3, .h3 { font-size: 1.5rem; }
 
+.card-columns {
+	@media (min-width: @breakpoint-sm) { column-count: 1; }
+	@media (min-width: @breakpoint-md) { column-count: 2; }
+	@media (min-width: @breakpoint-lg) { column-count: 3; }
+}
+
 /* responsive images by default */
 article {
 	h1, h2, h3, h4, h5, h6 {
