More card style tweaks.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/globals.less
+++ b/resources/assets/less/globals.less
@@ -23,6 +23,15 @@ h3, .h3 { font-size: 1.5rem; }
 	@media (min-width: @breakpoint-sm) { column-count: 1; }
 	@media (min-width: @breakpoint-md) { column-count: 2; }
 	@media (min-width: @breakpoint-lg) { column-count: 3; }
+
+	.card {
+		border-radius: 0;
+		margin-bottom: 0.75rem;
+	}
+
+	.card-img-top {
+		border-radius: 0;
+	}
 }
 
 /* responsive images by default */
