--- a/resources/assets/less/releases.less
+++ b/resources/assets/less/releases.less
@@ -1,9 +1,10 @@
 section.release-sidebar {
+	font-family: @secondary-regular-font;
 	padding: 10px 0;
 
 	span.badge {
 		padding: 7px 12px;
-		font-weight: 300;
+		font-weight: 400;
 		background: #000;
 	}
 
@@ -14,15 +15,15 @@ section.release-sidebar {
 
 section.release-header {
 	font-size: 30px;
-	font-family: @light-font;
+	font-weight: 300;
 
 	ul.release-info {
-		font-family: @regular-font;
-		font-size: 12.5px;
+		font-weight: 400;
+		font-size: 14px;
 	}
 
 	span.release-version {
-		font-family: @regular-font;
+		font-weight: 400;
 	}
 }
 
