--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -1,8 +1,11 @@
 /* global */
 @background: #fafafa;
 
-@regular-font: 'Roboto';
-@light-font: 'Roboto Light';
+/* primary font */
+@primary-regular-font: 'Source Sans Pro';
+
+/* secondary font */
+@secondary-regular-font: 'Roboto';
 
 /* breakpoints - bootstrap defaults */
 @breakpoint-xs: 0;
