Minor style changes again.
Signed-off-by: aixxe <me@aixxe.net>

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -124,6 +124,10 @@ main {
 		padding: 40px 50px;
 	}
 
+	p.summary {
+		font-size: 14px;
+	}
+
 	nav.page-navigation {
 		width: 100%;
 		margin: 0 auto;
