--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -121,7 +121,7 @@ main {
 	margin-bottom: 15px;
 	padding: 20px 30px;
 
-	@media (min-width: @breakpoint-sm) {
+	@media (min-width: @breakpoint-lg) {
 		padding: 40px 50px;
 	}
 
