--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -125,8 +125,65 @@ main {
 		padding: 40px 50px;
 	}
 
-	p.summary {
-		font-size: 14px;
+	// index project tiles
+	div.tile {
+		position: relative;
+		width: 100%;
+		height: 250px;
+		background-size: cover;
+		background-position: center;
+
+		// overlay container with dimmed background
+		div.overlay {
+			background-color: rgba(0, 0, 0, .5);
+			transition: background-color .15s ease;
+			width: 100%;
+			height: 100%;
+			z-index: 100;
+
+			&:hover {
+				background-color: rgba(0, 0, 0, .35);
+			}
+		}
+
+		div.info {
+			pointer-events: none;
+
+			// top-right project icons
+			div.icons {
+				position: absolute;
+				top: 0;
+				right: 0;
+				margin: 8px 8px 0 0;
+				background-color: rgba(0, 0, 0, .5);
+				padding: 2px 7px;
+
+				ul {
+					font-size: 12px;
+					color: #fff;
+					margin: 0;
+				}
+			}
+
+			// bottom-left project information
+			div.content {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				color: #fff;
+				padding: 0 0 15px 15px;
+				text-shadow: 0 0 5px #000;
+
+				span.title {
+					font-size: 20px;
+				}
+
+				p.summary {
+					margin: 0;
+					font-size: 13px;
+				}
+			}
+		}
 	}
 
 	nav.page-navigation {
