--- a/resources/assets/less/globals.less
+++ b/resources/assets/less/globals.less
@@ -22,15 +22,11 @@ h3, .h3 { font-size: 1.5rem; }
 .card-columns {
 	@media (min-width: @breakpoint-sm) { column-count: 1; }
 	@media (min-width: @breakpoint-md) { column-count: 2; }
-	@media (min-width: @breakpoint-lg) { column-count: 3; }
+	@media (min-width: @breakpoint-xl) { column-count: 3; }
 
 	.card {
 		border-radius: 0;
 		margin-bottom: 0.75rem;
-	}
-
-	.card-img-top {
-		border-radius: 0;
 	}
 }
 
