--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -130,6 +130,7 @@ main {
 		position: relative;
 		width: 100%;
 		height: 250px;
+		background-color: #000000;
 		background-size: cover;
 		background-position: center;
 
